==> china-djyos/djyos/bsp/cpudrv/imxrt/1050/src/spi/cpu_peri_spi.c <==
#include "string.h"
#include "board.h"
#include "spibus.h"
#include "heap.h"
#include "int.h"
#include "cpu_peri.h"
#include "cpu_peri_spi.h"
#include "cpu_peri_int_line.h"
#include "fsl_common.h"
#include "fsl_iomuxc.h"
#include "fsl_lpspi.h"
#include "project_config.h"     //本文件由IDE中配置界面生成，存放在APP的工程目录中。
#define CFG_MODULE_ENABLE_CPU_ONCHIP_SPI    false //如果勾选了本组件，将由DIDE在project_config.h或命令行中定义为true
#define CFG_SPI_BUF_LEN              128   //"配置SPI缓冲大小",
#define CFG_SPI1_ENABLE              false //"是否配置使用SPI1",
#define CFG_SPI2_ENABLE              false //"是否配置使用SPI2",
#define CFG_SPI3_ENABLE              false //"是否配置使用SPI3",
#define CFG_SPI4_ENABLE              false //"是否配置使用SPI4",
#define LPSPI_CLK_SOURCE         (1U) /* PLL3 PFD0 */
#define LPSPI_CLK_SOURCE_DIVIDER (8U) /* 8div */
#define EXAMPLE_LPSPI_CLOCK_FREQ (CLOCK_GetFreq(kCLOCK_Usb1PllPfd0Clk) / (LPSPI_CLK_SOURCE_DIVIDER))
#define EXAMPLE_LPSPI_MASTER_CLOCK_FREQ     EXAMPLE_LPSPI_CLOCK_FREQ
#define EXAMPLE_LPSPI_MASTER_PCS_FOR_INIT (kLPSPI_Pcs0)
#define EXAMPLE_LPSPI_MASTER_PCS_FOR_TRANSFER (kLPSPI_MasterPcs0)
#define TRANSFER_BAUDRATE 500000U /*! Transfer baudrate - 500k */
#define EXAMPLE_LPSPI_MASTER_BASEADDR (LPSPI1)
#define CN_TIMEOUT  (200*1000)
#define TRANSFER_SIZE 64U

static void __SPI_SetClk(volatile tagSpiReg *Reg,u32 Fre)
{
    u32 base = (u32)Reg;
    switch(base)
    {
        case LPSPI1_BASE:
                g_masterConfig[0].baudRate = Fre;
                break;
        case LPSPI2_BASE:
                g_masterConfig[1].baudRate = Fre;
                break;
        case LPSPI3_BASE:
                g_masterConfig[2].baudRate = Fre;
                break;
        case LPSPI4_BASE:
                g_masterConfig[3].baudRate = Fre;
                break;
        default:
                break;
    }
}

static void __SPI_Config(volatile tagSpiReg *Reg,tagSpiConfig *ptr)
{
    u8 port=0xff;
    u32 base=(u32)Reg;
    if(ptr->Freq > 40*1000*1000)
    {
        ptr->Freq = 40*1000*1000;
    }
    __SPI_SetClk(Reg,ptr->Freq);
    switch(base)
    {
        case LPSPI1_BASE:
                port=0;
                break;
        case LPSPI2_BASE:
                port=1;
                break;
        case LPSPI3_BASE:
                port=2;
                break;
        case LPSPI4_BASE:
                port=3;
                break;
        default:
                return;
    }

    if(ptr->CharLen!=8 && ptr->CharLen!=16 && ptr->CharLen!=32)
        return;

    //set the PHA
    if(ptr->Mode & SPI_CPHA)
    {
        g_masterConfig[port].cpha = kLPSPI_ClockPhaseSecondEdge;
    }
    else
    {
        g_masterConfig[port].cpha = kLPSPI_ClockPhaseFirstEdge;
    }
    //set the cpol
    if(ptr->Mode & SPI_CPOL)
    {
        g_masterConfig[port].cpol = kLPSPI_ClockPolarityActiveLow;
    }
    else
    {
        g_masterConfig[port].cpol = kLPSPI_ClockPolarityActiveHigh;
    }
    g_masterConfig[port].bitsPerFrame = ptr->CharLen;

    if(ptr->ShiftDir == SPI_SHIFT_LSB)
    {
        g_masterConfig[port].direction = kLPSPI_LsbFirst;
    }
    else
    {
        g_masterConfig[port].direction = kLPSPI_MsbFirst;
    }
}

static void __SPI_HardConfig(u32 BaseAddr)
{
    u8 port=0;
    CLOCK_SetMux(kCLOCK_LpspiMux, LPSPI_CLK_SOURCE);
    CLOCK_SetDiv(kCLOCK_LpspiDiv, LPSPI_CLK_SOURCE_DIVIDER-1);

    switch(BaseAddr)
    {
        case LPSPI1_BASE:
                port=0;
                break;
        case LPSPI2_BASE:
                port=1;
                break;
        case LPSPI3_BASE:
                port=2;
                break;
        case LPSPI4_BASE:
                port=3;
                break;
        default:
                return;
    }
    //LPSPI_MasterGetDefaultConfig(&g_masterConfig[port]);

    g_masterConfig[port].baudRate = TRANSFER_BAUDRATE;
    g_masterConfig[port].bitsPerFrame = 8;
    g_masterConfig[port].cpol = kLPSPI_ClockPolarityActiveHigh;
   g_masterConfig[port].cpha = kLPSPI_ClockPhaseFirstEdge;
   g_masterConfig[port].direction = kLPSPI_MsbFirst;

   g_masterConfig[port].pcsToSckDelayInNanoSec = 1000000000 / g_masterConfig[port].baudRate;
   g_masterConfig[port].lastSckToPcsDelayInNanoSec = 1000000000 / g_masterConfig[port].baudRate;
   g_masterConfig[port].betweenTransferDelayInNanoSec = 1000000000 / g_masterConfig[port].baudRate;

   g_masterConfig[port].whichPcs = EXAMPLE_LPSPI_MASTER_PCS_FOR_INIT;
   g_masterConfig[port].pcsActiveHighOrLow = kLPSPI_PcsActiveLow;

   g_masterConfig[port].pinCfg = kLPSPI_SdiInSdoOut;
   g_masterConfig[port].dataOutConfig = kLpspiDataOutRetained;

    LPSPI_MasterInit((tagSpiReg*)BaseAddr, &g_masterConfig[port], EXAMPLE_LPSPI_MASTER_CLOCK_FREQ);
    LPSPI_SetFifoWatermarks((tagSpiReg*)BaseAddr, 0, 0);
    //LPSPI_SetFifoWatermarks((tagSpiReg*)BaseAddr, txWatermark, g_masterRxWatermark);

    LPSPI_Enable((tagSpiReg*)BaseAddr, false);
    ((tagSpiReg*)BaseAddr)->CFGR1 &= (~LPSPI_CFGR1_NOSTALL_MASK);
    LPSPI_Enable((tagSpiReg*)BaseAddr, true);

    /*Flush FIFO , clear status , disable all the inerrupts.*/
    LPSPI_FlushFifo((tagSpiReg*)BaseAddr, true, true);
    LPSPI_ClearStatusFlags((tagSpiReg*)BaseAddr, kLPSPI_AllStatusFlag);
    LPSPI_DisableInterrupts((tagSpiReg*)BaseAddr, kLPSPI_AllInterruptEnable);

    ((tagSpiReg*)BaseAddr)->TCR =
            (((tagSpiReg*)BaseAddr)->TCR &
             ~(LPSPI_TCR_CONT_MASK | LPSPI_TCR_CONTC_MASK | LPSPI_TCR_RXMSK_MASK | LPSPI_TCR_PCS_MASK)) |
            LPSPI_TCR_CONT(0) | LPSPI_TCR_CONTC(0) | LPSPI_TCR_RXMSK(0) | LPSPI_TCR_TXMSK(0) | g_masterConfig[port].whichPcs;

}

static s32 __SPI_Read( tagSpiReg * Reg )
{
    u32 time = CN_TIMEOUT;
    u32 readData=0;
    while ( ( LPSPI_GetRxFifoCount(Reg) == 0 ) && (time > 0))
    {
        time --;
        DJY_DelayUs(1);
    }

    if(time == 0)
        return -1;

    readData = LPSPI_ReadData(Reg);

    return readData;
}

static s32 __SPI_Write( tagSpiReg * Reg,u8 wData )
{
    u32 time = CN_TIMEOUT;
    u32 fifoSize = LPSPI_GetTxFifoSize(Reg);
    /* Send data */
    while ( ( LPSPI_GetTxFifoCount(Reg) == fifoSize ) && (time > 0) )
    {
        time --;
        DJY_DelayUs(1);
    }
    if(time == 0)
        return -1;

    LPSPI_WriteData(Reg, wData);
    return 0;
}

static bool_t __SPI_TransferTxRx(tagSpiReg *Reg,u32 sendlen,u32 recvlen,
                                u32 recvoff)
{
    struct SPI_CB *pSCB=NULL;
    struct SPI_IntParamSet *Param=NULL;
    u32 fifo_size=0;
    u8 i=0;
    u8 ch=0,temp=0;

    if(Reg == tg_SpiReg[CN_SPI1])
    {
        pSCB = s_ptSpi1_CB;
        Param = &IntParamset1;
    }
    else if(Reg == tg_SpiReg[CN_SPI2])
    {
        pSCB = s_ptSpi2_CB;
        Param = &IntParamset2;
    }
    else if(Reg == tg_SpiReg[CN_SPI3])
    {
        pSCB = s_ptSpi3_CB;
        Param = &IntParamset3;
    }
    else if(Reg == tg_SpiReg[CN_SPI4])
    {
        pSCB = s_ptSpi4_CB;
        Param = &IntParamset4;
    }
    else
        return false;

    Param->SendDataLen = sendlen;
    Param->RecvDataLen = recvlen;
    Param->RecvOffset  = recvoff;
    fifo_size = LPSPI_GetTxFifoSize(Reg) - LPSPI_GetTxFifoCount(Reg);
    if(fifo_size>sendlen)//当缓冲区大小比要发送的数据还大时，没必要开发送中断，直接填到缓冲区里即可
    {
        for(i=0;i<sendlen;i++)
        {
            temp = SPI_PortRead(pSCB,&ch,1);//是否还有数据需要发送
            if(temp>1)
            {
                __SPI_Write(Reg, ch);
                Param->SendDataLen --;
                Param->RecvOffset  --;
            }
            else
                return false;//还没发完，但是已经从缓冲区中读不出数据了
        }
        if(recvlen>0)
        {
            __SPI_IntEnable(Reg,kLPSPI_RxInterruptEnable);
            __SPI_Write(Reg, 0XAA);
        }
    }
    else
    {
        __SPI_IntEnable(Reg,kLPSPI_TxInterruptEnable|kLPSPI_WordCompleteInterruptEnable     \
                            |kLPSPI_FrameCompleteInterruptEnable|kLPSPI_TransferCompleteInterruptEnable);

        for(i=0;i<fifo_size;i++)
        {
            temp = SPI_PortRead(pSCB,&ch,1);//是否还有数据需要发送
            if(temp>1)
            {
                __SPI_Write(Reg, ch);
                Param->SendDataLen --;
                Param->RecvOffset  --;
            }
            else
                return false;//还没发完，但是已经从缓冲区中读不出数据了
        }//系统会进入发送中断，继续发完剩下的
    }
    return true;
}

u32 SPI_ISR(ptu32_t IntLine)
{
    struct SPI_CB *pSCB=NULL;
    struct SPI_IntParamSet *param;
    tagSpiReg *Reg;
    u32 sr=0;
    u32 fifo_size=0;
    u8 ch=0;
    s32 temp=0;

    static u8 firstrcv = 0;

    if(IntLine == CN_INT_LINE_LPSPI1)
    {
        pSCB = s_ptSpi1_CB;
        Reg = (tagSpiReg *)tg_SpiReg[CN_SPI1];
        param = &IntParamset1;
    }
    else if(IntLine == CN_INT_LINE_LPSPI2)
    {
        pSCB = s_ptSpi2_CB;
        Reg = (tagSpiReg *)tg_SpiReg[CN_SPI2];
        param = &IntParamset2;
    }
    else if(IntLine == CN_INT_LINE_LPSPI3)
    {
        pSCB = s_ptSpi3_CB;
        Reg = (tagSpiReg *)tg_SpiReg[CN_SPI3];
        param = &IntParamset3;
    }
    else if(IntLine == CN_INT_LINE_LPSPI4)
    {
        pSCB = s_ptSpi4_CB;
        Reg = (tagSpiReg *)tg_SpiReg[CN_SPI4];
        param = &IntParamset4;
    }
    else
        return 0;

    sr = LPSPI_GetStatusFlags(Reg);
    LPSPI_ClearStatusFlags(Reg, sr);
    if(sr&kLPSPI_TxDataRequestFlag)//发送中断
    {
        fifo_size = LPSPI_GetTxFifoSize(Reg) - LPSPI_GetTxFifoCount(Reg);
        temp = SPI_PortRead(pSCB,&ch,fifo_size);//是否还有数据需要发送
        if(temp>0)
        {
            while(temp--)
            {
                param->SendDataLen --;
                param->RecvOffset  --;
                LPSPI_WriteData(Reg, ch);
            }
        }
        else                                            //表明发送结束
        {
            //关发送中断
            __SPI_IntDisable(Reg,kLPSPI_TxInterruptEnable);
            param->RecvOffset -= param->SendDataLen;
            param->SendDataLen = 0;

            //发送完成了，判断是否需要接收
            if(param->RecvDataLen > 0)
            {
                __SPI_IntEnable(Reg,kLPSPI_RxInterruptEnable);    //使能接收中断
                //MASTER模式下，发送和接收同时进行
                LPSPI_WriteData(Reg, 0xAA);
                firstrcv = 1;
            }
        }
    }
    else if(sr&kLPSPI_RxDataReadyFlag)    //接收中断
    {
        ch=LPSPI_ReadData(Reg);
        //计算接收了多少数据
        if(firstrcv != 1)
        {
            SPI_PortWrite(pSCB,&ch,1);
            param->RecvDataLen -= 1;
        }
        else
            firstrcv = 0;

        //判断是否还需接收数据
        if(param->RecvDataLen > 0)
        {
            LPSPI_WriteData(Reg, 0xAA);
        }
        else                    //表明接收已经完成
        {
            param->RecvDataLen = 0;
            __SPI_IntDisable(Reg,kLPSPI_RxInterruptEnable);
        }
    }
    return 0;
}

bool_t SPI_Initialize(u8 port)
{
    struct SPI_Param SPI_Config;
    struct SPI_CB **pSpiCB;
    u8 IntLine;

    switch(port)
    {
        case CN_SPI1:
            SPI_Config.BusName          = "SPI1";
            SPI_Config.SPIBuf           = (u8*)&s_Spi1_Buf;
            IntLine = CN_INT_LINE_LPSPI1;
            pSpiCB = &s_ptSpi1_CB;
            break;
        case CN_SPI2:
            SPI_Config.BusName          = "SPI2";
            SPI_Config.SPIBuf           = (u8*)&s_Spi2_Buf;
            IntLine = CN_INT_LINE_LPSPI2;
            pSpiCB = &s_ptSpi2_CB;
            break;
        case CN_SPI3:
            SPI_Config.BusName          = "SPI3";
            SPI_Config.SPIBuf           = (u8*)&s_Spi3_Buf;
            IntLine = CN_INT_LINE_LPSPI3;
            pSpiCB = &s_ptSpi3_CB;
            break;
        case CN_SPI4:
            SPI_Config.BusName          = "SPI4";
            SPI_Config.SPIBuf           = (u8*)&s_Spi4_Buf;
            IntLine = CN_INT_LINE_LPSPI4;
            pSpiCB = &s_ptSpi4_CB;
            break;
        default:
            return (0);
    }
    SPI_Config.SpecificFlag     = (ptu32_t)tg_SpiReg[port];
    SPI_Config.SPIBufLen        = CFG_SPI_BUF_LEN;
    SPI_Config.MultiCSRegFlag   = false;
    SPI_Config.pTransferPoll    = (TransferPoll)__SPI_TxRxPoll;
    SPI_Config.pTransferTxRx    = (TransferFunc)__SPI_TransferTxRx;
    SPI_Config.pCsActive        = (CsActiveFunc)__SPI_BusCsActive;
    SPI_Config.pCsInActive      = (CsInActiveFunc)__SPI_BusCsInActive;
    SPI_Config.pBusCtrl         = (SPIBusCtrlFunc)__SPI_BusCtrl;

    *pSpiCB = SPI_BusAdd(&SPI_Config);// 将SPI端口添加到SPI总线
    if(NULL == (*pSpiCB))
        return (0); // 失败

    __SPI_HardConfig((u32)SPI_Config.SpecificFlag); // SPI寄存器设置

    __SPI_IntConfig(IntLine); // 注册中断

    return (1); // 成功
}
