==> china-djyos/djyos/bsp/cpudrv/Nuvoton/M480/src/spi/cpu_peri_spi.c <==
#include "string.h"
#include "djyos.h"
#include "cpu_peri.h"
#include "int.h"
#include "spibus.h"
#include "math.h"
#define CN_TIMEOUT  (20*1000)
#define tagSpiReg SPI_T
#define CN_SPI_BUF_LEN              128
#define CN_SPI_DMA_BUF_LEN          128

static void __SPI_SetClk(volatile tagSpiReg *Reg,u32 Fre)
{
    u8 br;
    br = (u8)__SPI_BrCal(Fre);
    Reg->CR1 &= ~SPI_CR1_SPE;
    Reg->CR1 &= ~SPI_CR1_BR;
    Reg->CR1 |= br<<3;
}

static void __SPI_Config(volatile tagSpiReg *Reg,tagSpiConfig *ptr)
{
#if 0
    __SPI_SetClk(Reg,ptr->Freq);

    //set the PHA
    if(ptr->Mode & SPI_CPHA)
    {
        Reg->CR1 |= SPI_CR1_CPHA;
    }
    else
    {
        Reg->CR1 &= ~SPI_CR1_CPHA;
    }
#endif
    //设置时钟极性
    if(ptr->Mode & SPI_CPOL)
    {
        Reg->CTL |= SPI_CTL_CLKPOL_Msk;
    }
    else
    {
        Reg->CTL &= ~SPI_CTL_CLKPOL_Msk;
    }

    //设置数据宽度
    if(ptr->CharLen == 32)
    {
        Reg->CTL |= (0 << SPI_CTL_DWIDTH_Pos);
    }
    else
    {
        Reg->CTL |= (ptr->CharLen<< SPI_CTL_DWIDTH_Pos);
    }

    //设置LSB优先发送
    if(ptr->ShiftDir == SPI_SHIFT_LSB)
    {
        Reg->CTL |= SPI_CTL_LSB_Msk;
    }
    else
    {
        Reg->CTL &= ~SPI_CTL_LSB_Msk;
    }
}

static void __SPI_HardConfig(u32 BaseAddr)
{
    tagSpiReg *Reg;
    u32 temp = 0;

    Reg = (tagSpiReg *)BaseAddr;
    //配置SPI使用GPIO引脚
    /* Disable I2S mode */
    Reg->I2SCTL &= ~SPI_I2SCTL_I2SEN_Msk;

    Reg->CLKDIV = 0U;                           //配置SPI输出时钟频率

    Reg->SSCTL = SPI_SS_ACTIVE_LOW | SPI_SS;    //关闭自动从机选择功能，设置片选信号低电平有效
                                                //使能从机片选信号，激活片外从机设备

    temp |= SPI_MASTER;                         //SPI主机,配置MSB传输优先
    temp |= SPI_CTL_TXNEG_Msk;                  //配置SPI空闲状态为低电平,时钟下沿传输数据,时钟上沿锁存数据
    temp |= (8 << SPI_CTL_DWIDTH_Pos);          //设置8位数据格式
    temp |= SPI_CTL_SPIEN_Msk;                  //使能SPI
    Reg->CTL = temp ;                           // 设置CTL
}

static s32 __SPI_Read( tagSpiReg * Reg )
{
    u32 time = CN_TIMEOUT;
    while ( ( (Reg->STATUS & SPI_STATUS_RXEMPTY_Msk) == 0 ) && (time > 0))
    {
        time --;
        DJY_DelayUs(1);
    }

    if(time == 0)
        return -1;
    return Reg->RX & 0xFFFF ;
}

static s32 __SPI_Write( tagSpiReg * Reg,uint16_t wData )
{
    u32 time = CN_TIMEOUT;
    /* Send data */
    while ( ( (Reg->STATUS & SPI_STATUS_TXEMPTY_Msk) == 0 ) && (time > 0) )
    {
        time --;
        DJY_DelayUs(1);
    }
    if(time == 0)
        return -1;
    Reg->TX = wData;
    return 0;
}

static bool_t __SPI_TransferTxRx(tagSpiReg *Reg,u32 sendlen,u32 recvlen,
                                u32 recvoff)
{
    struct SPI_IntParamSet *Param=NULL;

    if(Reg == tg_SpiReg[CN_SPI0])
        Param = &IntParamset0;
    else if(Reg == tg_SpiReg[CN_SPI1])
        Param = &IntParamset1;
    else if(Reg == tg_SpiReg[CN_SPI2])
        Param = &IntParamset2;
    else
        Param = &IntParamset3;

    Param->SendDataLen = sendlen;
    Param->RecvDataLen = recvlen;
    Param->RecvOffset  = recvoff;

    __SPI_IntEnable(Reg,SPI_FIFOCTL_TXTHIEN_Msk); //发送缓冲区空中断使能
    Reg->CTL |= SPI_CTL_SPIEN_Msk;                //spi使能

    return true;
}

u32 SPI_ISR(ptu32_t IntLine)
{
    struct SPI_CB *pSCB=NULL;
    struct SPI_IntParamSet *param;
    tagSpiReg *Reg;
    u32 spi_sr,spi_cr2;
    u8 ch,temp;
    static u8 firstrcv = 0;

    if(IntLine == CN_INT_LINE_SPI0)
    {
        pSCB = &s_Spi0_CB;
        Reg = (tagSpiReg *)tg_SpiReg[CN_SPI0];
        param = &IntParamset0;
    }
    else if(IntLine == CN_INT_LINE_SPI1)
    {
        pSCB = &s_Spi1_CB;
        Reg = (tagSpiReg *)tg_SpiReg[CN_SPI1];
        param = &IntParamset1;
    }
    else if(IntLine == CN_INT_LINE_SPI2)
    {
        pSCB = &s_Spi2_CB;
        Reg = (tagSpiReg *)tg_SpiReg[CN_SPI2];
        param = &IntParamset2;
    }
    else if(IntLine == CN_INT_LINE_SPI3)
    {
        pSCB = &s_Spi3_CB;
        Reg = (tagSpiReg *)tg_SpiReg[CN_SPI3];
        param = &IntParamset3;
    }
    else
        return 0;

    spi_sr = Reg->STATUS;
    spi_cr2 = Reg->FIFOCTL;
    //发送中断
    if( (spi_cr2 & SPI_FIFOCTL_TXTHIEN_Msk) && ((spi_sr & SPI_STATUS_TXEMPTY_Msk)==0)) //使能了发送中断，且TXRIS
    {
        temp = SPI_PortRead(pSCB,&ch,1);//是否还有数据需要发送

        if(temp >0)
        {
            param->SendDataLen --;
            param->RecvOffset  --;
            Reg->TX = ch;
        }
        else                                            //表明发送结束
        {
            //关发送中断
            __SPI_IntDisable(Reg,SPI_FIFOCTL_TXTHIEN_Msk);
            param->RecvOffset -= param->SendDataLen;
            param->SendDataLen = 0;

            ch = Reg->RX;

            //发送完成了，判断是否需要接收
            if(param->RecvDataLen > 0)
            {
                //MASTER模式下，发送和接收同时进行
                Reg->TX = 0xAA;
                __SPI_IntEnable(Reg,SPI_FIFOCTL_RXTHIEN_Msk);    //使能接收中断
                firstrcv = 1;
            }
        }
    }
    else if((spi_cr2 & SPI_FIFOCTL_RXTHIEN_Msk) && ((spi_sr & SPI_STATUS_RXEMPTY_Msk)==0))    //接收中断
    {
        ch = Reg->RX;
        //计算接收了多少数据
        if(firstrcv != 1)
        {
            SPI_PortWrite(pSCB,&ch,1);
            param->RecvDataLen -= 1;
        }
        else
            firstrcv = 0;

        //判断是否还需接收数据
        if(param->RecvDataLen > 0)
        {
            Reg->TX = 0xAA;
        }
        else                    //表明接收已经完成
        {
            param->RecvDataLen = 0;
            __SPI_IntDisable(Reg,SPI_FIFOCTL_RXTHIEN_Msk);
        }
    }

    if(param->RecvDataLen + param->SendDataLen == 0)
    {
        Reg->CTL &= ~SPI_CTL_SPIEN_Msk;
    }

    return 0;
}

bool_t SPI_Initialize(u8 port)
{
    struct SPI_Param SPI_Config;
    struct SPI_CB *pSpiCB = NULL;
    u8 IntLine;

    switch(port)
    {
    case CN_SPI0:
        SPI_Config.BusName          = "SPI0";
        SPI_Config.SPIBuf           = (u8*)&s_Spi0_Buf;
        IntLine = CN_INT_LINE_SPI0;
        pSpiCB = &s_Spi0_CB;
        break;
    case CN_SPI1:
        SPI_Config.BusName          = "SPI1";
        SPI_Config.SPIBuf           = (u8*)&s_Spi1_Buf;
        IntLine = CN_INT_LINE_SPI1;
        pSpiCB = &s_Spi1_CB;
        break;
    case CN_SPI2:
        SPI_Config.BusName          = "SPI2";
        SPI_Config.SPIBuf           = (u8*)&s_Spi2_Buf;
        IntLine = CN_INT_LINE_SPI2;
        pSpiCB = &s_Spi2_CB;
        break;
    case CN_SPI3:
        SPI_Config.BusName          = "SPI3";
        SPI_Config.SPIBuf           = (u8*)&s_Spi3_Buf;
        IntLine = CN_INT_LINE_SPI3;
        pSpiCB = &s_Spi3_CB;
        break;
    default:
        return (0);
    }
    SPI_Config.SpecificFlag     = (ptu32_t)tg_SpiReg[port];
    SPI_Config.SPIBufLen        = CN_SPI_BUF_LEN;
    SPI_Config.MultiCSRegFlag   = false;
    SPI_Config.pTransferPoll    = (TransferPoll)__SPI_TxRxPoll;
    SPI_Config.pTransferTxRx    = (TransferFunc)__SPI_TransferTxRx;
    SPI_Config.pCsActive        = (CsActiveFunc)__SPI_BusCsActive;
    SPI_Config.pCsInActive      = (CsInActiveFunc)__SPI_BusCsInActive;
    SPI_Config.pBusCtrl         = (SPIBusCtrlFunc)__SPI_BusCtrl;

    if(NULL == SPI_BusAdd_s(pSpiCB, &SPI_Config)) // 将SPI端口添加到SPI总线
        return (0); // 失败

    __SPI_HardConfig((u32)SPI_Config.SpecificFlag); // SPI寄存器设置

    __SPI_IntConfig(IntLine); // 注册中断

    return (1); // 成功
}
